--- a/arch/arm64/boot/dts/hisilicon/hi6220-hikey.dts
+++ b/arch/arm64/boot/dts/hisilicon/hi6220-hikey.dts
@@ -7,13 +7,11 @@
 
 /dts-v1/;
 
-/memreserve/ 0x0740f000 0x1000;
-
 #include "hi6220.dtsi"
 
 / {
 	model = "HiKey Development Board";
-	compatible = "hisilicon,hi6220-hikey";
+	compatible = "hisilicon,hi6220", "hisilicon,hi6220-hikey";
 	#address-cells = <2>;
 	#size-cells = <2>;
 	interrupt-parent = <&gic>;
@@ -27,5 +25,21 @@
 	memory@7400000 {
 		device_type = "memory";
 		reg = <0x0 0x07400000 0x0 0x38c00000>;
+	};
+
+	reserved-memory {
+		#address-cells = <2>;
+		#size-cells = <2>;
+		ranges;
+
+		mcu-buf@0740f000 {
+			no-map;
+			reg = <0x0 0x0740f000 0x0 0x00001000>;
+		};
+
+		mailbox-buf@06DFF000 {
+			no-map;
+			reg = <0x0 0x06DFF000 0x0 0x00001000>;
+		};
 	};
 };
