mailbox: hi6220: add mailbox driver
Add driver for Hi6220 mailbox, the mailbox will communicate with MCU.
For sending data, it can support two methods for low level
implementation: one is to use interrupt as acknowledge, another is
automatic mode which without any acknowledge. These two methods have
been supported in the driver. For receiving data, it will depend on the
interrupt to notify there have message.

Now mailbox driver is used to control dynamic voltage and frequency
scaling for CPU, GPU and DDR.

Signed-off-by: Leo Yan <leo.yan@linaro.org>

--- a/drivers/mailbox/Kconfig
+++ b/drivers/mailbox/Kconfig
@@ -60,4 +60,12 @@ config OMAP_MBOX_KFIFO_SIZE
 	  Specify the default size of mailbox's kfifo buffers (bytes).
 	  This can also be changed at runtime (via the mbox_kfifo_size
 	  module parameter).
+
+config HI6220_MBOX
+	tristate "Hi6220 Mailbox"
+	help
+          An implementation of the hi6220 mailbox. It is used to send message
+	  between application processors and MCU. Say Y here if you want to build
+	  the Hi6220 mailbox controller driver.
+
 endif
