--- a/arch/arm64/boot/dts/hisilicon/hi6220-hikey.dts
+++ b/arch/arm64/boot/dts/hisilicon/hi6220-hikey.dts
@@ -13,7 +13,7 @@
 
 / {
 	model = "HiKey Development Board";
-	compatible = "hisilicon,hi6220-hikey";
+	compatible = "hisilicon,hi6220-hikey", "hisilicon,hi6220";
 	#address-cells = <2>;
 	#size-cells = <2>;
 	interrupt-parent = <&gic>;
