arm64: dts: add Hi6220 mailbox node
Due mailbox uses DDR memory as channels data buffer, so need reserve the
memory in dts, And MCU firmware also uses the DDR memory for its code
section; So firstly reserve these two memory sections.

Also add the Hi6220's mailbox node.

Signed-off-by: Leo Yan <leo.yan@linaro.org>

--- a/arch/arm64/boot/dts/hi6220-hikey.dts
+++ b/arch/arm64/boot/dts/hi6220-hikey.dts
@@ -40,6 +40,22 @@
 		reg = <0x0 0x0 0x0 0x38c00000>;
 	};
 
+	reserved-memory {
+		#address-cells = <2>;
+		#size-cells = <2>;
+		ranges;
+
+		mcu-buf@0740f000 {
+			no-map;
+			reg = <0x0 0x0740f000 0x0 0x00001000>;
+		};
+
+		mailbox-buf@06dff000 {
+			no-map;
+			reg = <0x0 0x06dff000 0x0 0x00001000>;
+		};
+	};
+
 	smb {
 		uart0: uart@f8015000 {	/* console */
 			status = "ok";
