--- a/arch/arm64/boot/dts/hi6220.dtsi
+++ b/arch/arm64/boot/dts/hi6220.dtsi
@@ -1124,6 +1124,13 @@
 		interrupts = <0 77 0x4>;
 	};
 
+	mailbox: mailbox {
+		#mbox-cells = <1>;
+		compatible = "hisilicon,hi6220-mbox";
+		reg = <0x0 0xf7510000 0x0 0x1000>, /* IPC_S */
+		      <0x0 0x06dff800 0x0 0x0800>; /* Mailbox buffer */
+		interrupts = <GIC_SPI 94 IRQ_TYPE_LEVEL_HIGH>;
+	};
 
 	tsensor: tsensor@0,f7030700 {
 		compatible = "hisilicon,tsensor";
